# nn-engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  camera.cpp  camera.h  color_rgb.cpp  config.cpp  config.h  entity.h  entity_factory.cpp  entity_factory.h  game.cpp  game.h  game.json  globals.h  imp.h  input_packet.cpp  input_packet.h  main.cpp  monster.cpp  monster.h  moving_entity.h  play  player.cpp  player.h  png.cpp  projectile.cpp  projectile.h  raycast.cpp  raycast.h  renderer.cpp  renderer.h  seg_wrapper.sh  sprite.cpp  texture.cpp  texture.h  textured_entity.h  utils.cpp  (+2 more)
game/: CMakeLists.txt  PathFinderSystem.cpp  Wenkenstein - Working.sln  Wenkenstein - Working.vcxproj  Wenkenstein - Working.vcxproj.filters  follow_scene.cpp
game/include/: PathFinderSystem.h  follow_scene.h
game/src/: follow_scene.cpp  main.cpp
include/: components.h  config.h  coordinator.h  engine.h  entities.h  entity.h  entity_factory_registration.h  globals.h  input_packet.h  monster.h  player.h  png.h  projectile.h  raycast.h  renderer.h  sprite.h
include/components/: ai_component.h  basic_moving_object_phyiscs_component.h  component.h  graphics_component.h  imp_ai_component.h  imp_graphics_component.h  input_component.h  physics_component.h  player_input_component.h  projectile_physics_component.h  sprite_graphics_component.h
include/engine/: engine.h
include/game_objects/: basic_moving_object.h  game_object.h  imp.h  player.h  positional_object.h  projectile_object.h  static_sprite.h
include/graphics/: camera.h  renderer.h  texture.h
include/managers/: components_manager.h  components_registration.h  game_object_manager.h  game_object_registration.h
include/scene/: scene.h  scene_state_machine.h
include/scenes/: basic_example_scene.h  changelevel_scene.h  movement_test_scene.h  starter_scene.h
include/systems/: input_system.h  physics_system.h  player_movement_system.h  system.h
lib/: CMakeLists.txt
lib/include/: components.h  globals.h  world.h
lib/src/: raycast.cpp  utils.cpp  world.cpp
src/: camera.cpp  config.cpp  coordinator.cpp  engine.cpp  game.cpp  imp.cpp  input_packet.cpp  main.cpp  monster.cpp  player.cpp  projectile.cpp  raycast.cpp  renderer.cpp  texture.cpp  utils.cpp  world.cpp
src/components/: basic_moving_object_physics_component.cpp  imp_ai_component.cpp  imp_graphics_component.cpp  input_component.cpp  physics_component.cpp  player_input_component.cpp  projectile_physics_component.cpp  sprite_graphics_component.cpp
src/engine/: config.cpp  engine.cpp
src/game_objects/: imp.cpp  player.cpp  projectile_object.cpp  static_sprite.cpp
src/graphics/: camera.cpp  png.cpp  renderer.cpp  texture.cpp
src/input/: input_packet.cpp  keyboard.cpp
src/managers/: components_manager.cpp  game_object_manager.cpp
src/scene/: scene_state_machine.cpp
src/scenes/: basic_example_scene.cpp  changelevel_scene.cpp  movement_test_scene.cpp  starter_scene.cpp
src/systems/: input_system.cpp  physics_system.cpp  physics_system.h  render_system.cpp  sprite_system.cpp  system.cpp
(+31 files in other folders)
